2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp09/screen01.c, sp09/screen02.c, sp09/screen03.c, sp09/screen05.c,
	sp09/screen09.c, sp09/screen14.c, sp09/sp09.scn, sp28/init.c,
	sp28/sp28.scn, sp43/init.c: Add more error cases uncovered by uC5282
	coverage runs.

2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp09/screen02.c, sp09/screen04.c, sp09/screen07.c, sp09/screen09.c,
	sp09/screen10.c, sp09/screen11.c, sp09/screen12.c, sp09/sp09.scn: Add
	some error cases uncovered by uC5282 coverage runs.

2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp33/init.c, sp33/sp33.scn: Add some barrier error cases uncovered by
	uC5282 coverage runs.

2009-09-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp59/init.c, spintrcritical15/init.c, spintrcritical16/init.c:
	Correct minor issues uncovered on uC5282.

2009-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp04/tswitch.c, sp07/system.h, sp07/taskexit.c, sp07/tdelete.c,
	sp07/tstart.c, spfatal_support/init.c, spfatal_support/system.h:
	Eliminate use of deprecated rtems_extension.

2009-09-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp14/asr.c, sp14/sp14.doc, sp14/task1.c, sp14/task2.c: Adjust test to
	run when IO speed varies.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp43/init.c, sp43/sp43.scn: Minor correction to test case so it hits
	the intended code.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac: Revert accidentally committed lines.

2009-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, sp65/init.c: Add new test to exercise very
	simple priority ceiling case that was previously only tested via the
	POSIX API.
	* sp66/.cvsignore, sp66/Makefile.am, sp66/init.c, sp66/sp66.doc,
	sp66/sp66.scn: New files.

2009-09-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/Makefile.am, sp43/init.c, sp43/sp43.scn, sp43/system.h: Add test
	for Id which is in range for the object class but not allocated yet.
