@@ -123,6 +123,7 @@ spintrcritical13/Makefile
 spintrcritical14/Makefile
 spintrcritical15/Makefile
 spintrcritical16/Makefile
+spnotepad01/Makefile
 spobjgetnext/Makefile
 spprintk/Makefile
 spsize/Makefile
