@@ -1,0 +1,26 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2009.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  spnotepad01
+
+directives:
+
+  rtems_task_get_note
+  rtems_task_set_note
+
+concepts:
+
++ Ensure that the proper error code is returned by the notepad services
+  when notepads are not configured.
+  is less than the minimum.  This is mainly to ensure that a branch is taken.
+
