@@ -1,0 +1,4 @@
+*** TEST NOTEPADS DISABLED ***
+Init - rtems_task_get_note - RTEMS_NOT_CONFIGURED
+Init - rtems_task_set_note - RTEMS_NOT_CONFIGURED
+*** END OF TEST NOTEPADS DISABLED ***
